--- a/index.html
+++ b/index.html
@@ -3,25 +3,22 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-  <title>Unity WebGL Player | AlexKornevGame</title>
+  <title>Unity WebGL Player | TGBot</title>
   <style>
-    html, body {
-      margin: 0;
+    body {
+      text-align: center;
       padding: 0;
-      overflow: hidden; /* Убирает ползунки */
-      width: 100%;
-      height: 100%;
+      border: 0;
+      margin: 0;
+      overflow: hidden; /* Убирает полосы прокрутки */
     }
-    #unity-canvas {
+    canvas {
       background: #231F20;
-      display: block;
-      width: 100%;
-      height: 100%;
     }
   </style>
 </head>
 <body>
-<canvas id="unity-canvas" tabindex="-1"></canvas>
+<canvas id="unity-canvas" width="385" height="600" tabindex="-1"></canvas>
 <script src="Build/TGBot.loader.js"></script>
 <script>
   if (/iPhone|iPad|iPod|Android/i.test(navigator.userAgent)) {
@@ -32,16 +29,20 @@
     document.getElementsByTagName('head')[0].appendChild(meta);
 
     var canvas = document.querySelector("#unity-canvas");
+    canvas.style.width = "100%";
+    canvas.style.height = "100%";
     canvas.style.position = "fixed";
+
+    document.body.style.textAlign = "left";
   }
 
   createUnityInstance(document.querySelector("#unity-canvas"), {
-    dataUrl: "Build/TGBot.js",
+    dataUrl: "Build/TGBot.data",
     frameworkUrl: "Build/TGBot.framework.js",
     codeUrl: "Build/TGBot.wasm",
     streamingAssetsUrl: "StreamingAssets",
     companyName: "DefaultCompany",
-    productName: "AlexKornevGame",
+    productName: "TGBot",
     productVersion: "1.1",
     // matchWebGLToCanvasSize: false, // Uncomment this to separately control WebGL canvas render size and DOM element size.
     // devicePixelRatio: 1, // Uncomment this to override low DPI rendering on high DPI displays.
