--- a/index.html
+++ b/index.html
@@ -4,6 +4,18 @@
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>Unity WebGL Player | TGBot</title>
+    <style>
+      body {
+        overflow: hidden;
+        margin: 0;
+        padding: 0;
+      }
+
+      #unity-canvas {
+        display: block;
+        overflow: hidden;
+      }
+    </style>
   </head>
   <body style="text-align: center; padding: 0; border: 0; margin: 0;">
     <canvas id="unity-canvas" width=385 height=600 tabindex="-1" style="width: 385px; height: 600px; background: #231F20"></canvas>
