--- a/index.html
+++ b/index.html
@@ -4,38 +4,32 @@
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>Unity WebGL Player | TGBot</title>
-    <style>
-      body {
-        overflow: hidden;
-        margin: 0;
-        padding: 0;
-      }
-
-      #unity-canvas {
-        display: block;
-        overflow: hidden;
-      }
-    </style>
   </head>
+  <style>
+    body{
+      overflow: hidden;
+      margin: 0;
+      padding: 0;
+    }
+    
+    #unity-canvas {
+      display: block;
+      overflow: hidden;
+    }
+  </style>
   <body style="text-align: center; padding: 0; border: 0; margin: 0;">
     <canvas id="unity-canvas" width=385 height=600 tabindex="-1" style="width: 385px; height: 600px; background: #231F20"></canvas>
     <script src="Build/TGBot.loader.js"></script>
     <script>
-      if (/iPhone|iPad|iPod|Android/i.test(navigator.userAgent)) {
-        // Mobile device style: fill the whole browser client area with the game canvas:
-        var meta = document.createElement('meta');
-        meta.name = 'viewport';
-        meta.content = 'width=device-width, height=device-height, initial-scale=1.0, user-scalable=no, shrink-to-fit=yes';
-        document.getElementsByTagName('head')[0].appendChild(meta);
-
-        var canvas = document.querySelector("#unity-canvas");
-        canvas.style.width = "100%";
-        canvas.style.height = "100%";
-        canvas.style.position = "fixed";
-
-        document.body.style.textAlign = "left";
+      function detectDevice(unityInstance) {
+        var userAgent = navigator.userAgent || navigator.vendor || window.opera;
+        var isMobile = /android|iPad|iPhone|iPod/i.test(userAgent);
+          
+        // Отправляем информацию о типе устройства в Unity
+        unityInstance.SendMessage('GameManager', 'ReceiveDeviceInfo', isMobile ? 'Mobile' : 'PC');
       }
 
+      // Инициализация Unity
       createUnityInstance(document.querySelector("#unity-canvas"), {
         dataUrl: "Build/TGBot.data",
         frameworkUrl: "Build/TGBot.framework.js",
@@ -46,6 +40,11 @@
         productVersion: "1.1",
         // matchWebGLToCanvasSize: false, // Uncomment this to separately control WebGL canvas render size and DOM element size.
         // devicePixelRatio: 1, // Uncomment this to override low DPI rendering on high DPI displays.
+      }).then(function (unityInstance) {
+        // Вызываем detectDevice после успешной инициализации Unity
+        detectDevice(unityInstance);
+      }).catch(function (message) {
+        console.error(message);
       });
     </script>
   </body>
