--- a/index.html
+++ b/index.html
@@ -6,15 +6,18 @@
     <title>Unity WebGL Player | TGBot</title>
   </head>
   <style>
-    body{
+    body {
       overflow: hidden;
       margin: 0;
       padding: 0;
     }
-    
+
     #unity-canvas {
       display: block;
-      overflow: hidden;
+      position: fixed;
+      width: 100%;
+      height: 100%;
+      background: #231F20;
     }
   </style>
   <body style="text-align: center; padding: 0; border: 0; margin: 0;">
