--- a/index.html
+++ b/index.html
@@ -10,27 +10,32 @@
       overflow: hidden;
       margin: 0;
       padding: 0;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      background: #231F20;
     }
 
     #unity-canvas {
       display: block;
-      position: fixed;
       width: 100%;
-      height: 100%;
-      background: #231F20;
+      height: auto;
+      max-width: 100vw;
+      max-height: 100vh;
     }
 
     /* Адаптивные стили для мобильных устройств */
     @media only screen and (max-width: 600px) {
       #unity-canvas {
-        width: 100%;
-        height: auto;
-        aspect-ratio: 9/16;
+        width: 100vw;
+        height: 100vh;
+        object-fit: contain; /* Сохраняет пропорции */
       }
     }
   </style>
 </head>
-<body style="text-align: center; padding: 0; border: 0; margin: 0;">
+<body>
 <canvas id="unity-canvas" tabindex="-1"></canvas>
 <script src="Build/TGBot.loader.js"></script>
 <script>
@@ -54,23 +59,6 @@
     // Вызываем функцию для определения устройства и отправки информации в Unity
     detectDevice(unityInstance);
   });
-
-  // Адаптивное изменение размера canvas для мобильных устройств
-  function resizeCanvas() {
-    var canvas = document.querySelector("#unity-canvas");
-    var aspectRatio = 9 / 16; // или другой аспект, который вам нужен
-
-    if (window.innerWidth < 600) {
-      canvas.style.height = (window.innerWidth / aspectRatio) + 'px';
-    } else {
-      canvas.style.height = '100%';
-    }
-  }
-
-  window.addEventListener('resize', resizeCanvas);
-  window.addEventListener('orientationchange', resizeCanvas);
-
-  resizeCanvas(); // Вызываем функцию при загрузке страницы
 </script>
 </body>
 </html>
