--- a/index.html
+++ b/index.html
@@ -65,12 +65,11 @@
     detectDevice(unityInstance);
 
     // Получаем параметр userId из URL и отправляем его в Unity
+    console.log("HUI HUI HUI HUI");
     const userId = getQueryParameter('userId');
-    const userName = getQueryParameter('userName');
-    console.log(userId)
-    console.log(userName)
+    console.log("User ID from URL:", userId);
     if (userId) {
-      unityInstance.SendMessage('ServiceLocator', 'ReceiveUserData', userId, userName);
+      unityInstance.SendMessage('ServiceLocator', 'ReceiveUserData', userId);
     }
   });
 </script>
