--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     //Вызываем функцию для определения устройства и отправки информации в Unity
     detectDevice(unityInstance);
 
-    //Получаем параметры userId и userName из URL и отправляем их в Unity
+    //Получаем параметры userFirstName и userLastName из URL и отправляем их в Unity
     const userFirstName = getQueryParameter('userFirstName');
     const userLastName = getQueryParameter('userLastName');
 
