TGB-39 (IPhone bug fix)

--- a/index.html
+++ b/index.html
@@ -48,7 +48,9 @@
 
     unityInstance.SendMessage('ServiceLocator', 'ReceiveDeviceInfo', isMobile ? 'Mobile' : 'PC');
 
-    unityInstance.SendMessage('ServiceLocator', 'ReceiveIPhoneInfo', isIPhone);
+    if(isIPhone){
+      unityInstance.SendMessage('ServiceLocator', 'ReceiveIPhoneInfo', isIPhone);
+    }
   }
 
   function getQueryParameter(name) {
