TGB-46 (Delete iphone checker)

--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
 
     unityInstance.SendMessage('ServiceLocator', 'ReceiveDeviceInfo', isMobile ? 'Mobile' : 'PC');
 
-    if(isIPhone){
-      unityInstance.SendMessage('ServiceLocator', 'ReceiveIPhoneInfo', isIPhone);
-    }
+    // if(isIPhone){
+    //   unityInstance.SendMessage('ServiceLocator', 'ReceiveIPhoneInfo', isIPhone);
+    // }
   }
 
   function getQueryParameter(name) {
